[package]
name = "nitro-exchange-rs"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
base64 = "0.22.1"
p256 = { version = "0.13.2", features = ["ecdh"] }
hkdf = "0.12.4"
sha2 = "0.10.9"
uuid = { version = "1.18.1", features = ["v4"] }
tower-http = { version = "0.6.6", features = ["cors"] }
aes-gcm = "0.10.3"
env_logger = "0.11.8"
log = "0.4.28"
clap = { version = "4.5.47", features = ["derive"] }

[features]
default = []
insecure-logs = []
