[package]
name = "nitro-exchange-client"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
nitro-exchange-common = { path = "../common" }
tokio = { version = "1.47.1", features = ["full"] }
base64 = "0.22.1"
p256 = { version = "0.13.2", features = ["ecdh"] }
hkdf = "0.12.4"
sha2 = "0.10.9"
env_logger = "0.11.8"
clap = { version = "4.5.47", features = ["derive"] }
tokio-vsock = "0.7.2"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
rand = "0.9.2"
serde_json = "1.0.143"
hyper = "1.7.0"
hyper-util = "0.1.16"
http-body-util = "0.1.3"
bytes = "1.10.1"
log = "0.4.28"