[package]
name = "nitro-exchange-proxy"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
env_logger = "0.11.8"
log = "0.4.28"
clap = { version = "4.5.47", features = ["derive"] }
tokio-vsock = "0.7.2"
serde_json = "1.0.143"
hyper = { version = "1.7.0", features = ["client"] }
hyper-util = "0.1.16"
http-body-util = "0.1.3"
bytes = "1.10.1"
